날짜조회기능 추가

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" href="dist/scss/style.css">
 </head>
@@ -61,6 +62,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="dist/js/index.js"></script>
 </body>
 
 </html>
